--- a/home.html
+++ b/home.html
@@ -13,9 +13,9 @@
       <div class="card" style="background-color: #228678;">
         <h1>Herzlich Willkommen auf dem Uhlenbusch</h1>
       </div>
-    <div>
-      <img src="Uhlenbusch.jpeg" style="max-width: 100%; max-height: 100%">
-    </div>
-  </div>
+      <img src="https://res.cloudinary.com/dcweujhlp/image/upload/v1590154247/Uhlenbusch_gqrisk.jpg" style="max-width: 100%; max-height: 100%">
+<!-- <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/dcweujhlp/image/upload/v1590154247/Uhlenbusch_gqrisk.jpg);"> -->
+</div>
+
 </body>
 </html>
