--- a/home.html
+++ b/home.html
@@ -5,17 +5,21 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Uhlenbusch</title>
+  <title>Hof Uhlenbusch</title>
 </head>
 
-<body style="background-color: #CCC88C">
-  </div>
-      <div class="card" style="background-color: #228678;">
-        <h1>Herzlich Willkommen auf dem Uhlenbusch</h1>
-      </div>
-      <img src="https://res.cloudinary.com/dcweujhlp/image/upload/v1590154247/Uhlenbusch_gqrisk.jpg" style="max-width: 100%; max-height: 100%">
+<body style="background-color: #CCC88C;">
+  <div class="container" style="max-height: 100%">
+    <div class="card" style="background-color: #228678;">
+      <h1>Herzlich Willkommen auf dem Uhlenbusch</h1>
+    </div>
+    <img src="https://res.cloudinary.com/dcweujhlp/image/upload/v1590154247/Uhlenbusch_gqrisk.jpg" style="max-width: 100%">
+
 <!-- <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/dcweujhlp/image/upload/v1590154247/Uhlenbusch_gqrisk.jpg);"> -->
-</div>
+    <div class="card" style="background-color: #228678; max-height: 10%">
+      <h1>Kontakt</h1>
+    </div>
+  </div>
 
 </body>
 </html>
