--- a/index.html
+++ b/index.html
@@ -12,17 +12,12 @@
   <div class="container" style="max-height: 100%">
     <div class="card" style="background-color: #228678;">
       <h1>Herzlich Willkommen auf dem Uhlenbusch</h1>
-      <h1>und...</h1>
-      <h1>ALLES LIEBE ZUM GEBURTSTAG!</h1>
-      <span style='font-size:100px;'>&#128536;</span>
     </div>
     <img src="https://res.cloudinary.com/dcweujhlp/image/upload/v1590154247/Uhlenbusch_gqrisk.jpg" style="max-width: 100%">
 
 <!-- <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/dcweujhlp/image/upload/v1590154247/Uhlenbusch_gqrisk.jpg);"> -->
     <div class="cardi" style="background-color: #228678; max-height: 10%">
-      <h1>Lieber Papa, Ich wünsche Dir alles Liebe zu Deinem Geburtstag!</h1>
-      <h1>Zu Deinem Geburtstag schenke ich Dir Dieses Jahr mal etwas anderes...</h2>
-      <h1>Nun müssen wir nur noch mehr Bildmaterial zusammensammeln und losbasteln. Ich freue mich darauf</h2>
+      <h1>Wir freuen uns Ihnen bald mehr Eiblicke zu gewähren</h1>
       <span style='font-size:100px;'>&#128536;</span>
     </div>
   </div>
